add listing  compartiment table

--- a/IMS_front_app/src/app/pages/compartiment-page/compartiment-page.component.html
+++ b/IMS_front_app/src/app/pages/compartiment-page/compartiment-page.component.html
@@ -1,4 +1,3 @@
 <div class="compartimentPage_container">
-  compartiment-page
-  works!---------------------------------------------------------------------------------
+  <compartiments-table [compartiments]="compartiments"></compartiments-table>
 </div>
