fixed and commented filter for good comprehension

--- a/IMS_front_app/src/app/pages/compartiment-page/compartiments-table/compartiments-table.component.html
+++ b/IMS_front_app/src/app/pages/compartiment-page/compartiments-table/compartiments-table.component.html
@@ -4,7 +4,7 @@
 
 <table
   mat-table
-  [dataSource]="compartiments"
+  [dataSource]="dataSource"
   *ngIf="compartiments.length > 0"
   class="mat-elevation-z8"
 >
